# GestoreNote

./: CMakeLists.txt  C_Observer.cpp  C_Observer.h  Collection.cpp  Collection.h  IObserver.h  ISubject.h  Menu.cpp  Menu.h  Note.cpp  Note.h  README.md  main.cpp
test/: CMakeLists.txt  GestoreNoteFixture.cpp  GestoreNoteTest.cpp  runAllTests.cpp
